--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div id = "wrap">
+      <%= render 'shared/nav' %>
+
+      <div class = "container">
+        <%= yield %>
+      </div>
+
+    </div>
+      <%= render 'shared/footer' %>
+
+
   </body>
 </html>
