--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -7,7 +7,9 @@ $main-blue: #337ab7;
   font-family: $secondary-font;
   background-color: white;
 }
-html, body {
+html,
+ body {
+   height: 100%;
   font-family: $primary-font;
 }
 .navbar-default .navbar-brand {
@@ -18,4 +20,13 @@ html, body {
 }
 .footer{
   height: $footer-height;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto $footer-height;
+  /* Pad bottom by footer height */
+  padding: 0 0 $footer-height;
 }
