--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="footer text-center">
-<p>© TECHRISE <%= Date.today.year %> All Rights Reserved</p>
+<p>© MancheChahiyo <%= Date.today.year %> All Rights Reserved</p>
 </div>
