--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,1 +1,23 @@
-An online platform that connect applicant with hirer
+<div class="search col-lg-6 col-xs-12" style="float:right">
+   <input type="text" name="search" placeholder="Search..">
+
+</div>
+
+
+<div class="categories col-lg-6 col-xs-12" >
+  <h3>Categories</h3>
+  <ul>
+    <li>Article Writing</li>
+    <li>Bill Payments</li>
+    <li>Photography</li>
+    <li>Laptop/ Mobile repairs</li>
+    <li>Designing</li>
+    <li>Printing</li>
+    <li>Web development</li>
+    <li>application development</li>
+
+    <li>Transportation</li>
+    <li>Consulting Services</li>
+    <li>Tuitions</li>
+  </ul>
+</div>
