--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -17,16 +17,45 @@ html,
   font-size: 30px;
   letter-spacing: 10px;
   color: $main-blue;
+  width: 100%;
 }
 .footer{
   height: $footer-height;
 }
 
 #wrap {
-  min-height: 100%;
+  min-height:90%;
   height: auto;
   /* Negative indent footer by its height */
   margin: 0 auto $footer-height;
   /* Pad bottom by footer height */
   padding: 0 0 $footer-height;
+}
+a{
+  color:black!important;
+}
+
+ul{
+  list-style-type: none;
+}
+.categories{
+  height: 400px;
+  width:400px;
+  padding: 2px 2px 2px 2px;
+
+}
+
+.input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 100%;
+}
+.search{
+  align:right;
+  padding: 20px;
 }
