--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -56,6 +56,12 @@ input[type=text]:focus {
     width: 100%;
 }
 .search{
-  align:right;
-  padding: 20px;
+  vertical-align: middle;
+  text-align: center;
+  padding-bottom: 20%;
+}
+.recentposts{
+  vertical-align: middle;
+  text-align: center;
+
 }
