--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -21,3 +21,12 @@
     <li>Tuitions</li>
   </ul>
 </div>
+
+<div class="Recentposts">
+  <h4>Recent Posts</h4>
+  <ul>
+<li>
+
+</li>
+  </ul>
+</div>
