--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,29 +39,51 @@ ul{
   list-style-type: none;
 }
 .categories{
+  border: solid 1px;
   height: 400px;
   width:400px;
   padding: 2px 2px 2px 2px;
+}
+h3{
+  font-style: italic;
+  font-size: 40;
 
 }
+// .input[type=text] {
+//     width: 130px;
+//     -webkit-transition: width 0.4s ease-in-out;
+//     transition: width 0.4s ease-in-out;
+// }
+//
+// /* When the input field gets focus, change its width to 100% */
+// input[type=text]:focus {
+//     width: 100%;
+// }
 
-.input[type=text] {
-    width: 130px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-/* When the input field gets focus, change its width to 100% */
-input[type=text]:focus {
-    width: 100%;
+input[type="button"]{
+  margin: 0 auto;
 }
 .search{
-  vertical-align: middle;
-  text-align: center;
-  padding-bottom: 20%;
+ border: 1px solid;
 }
-.recentposts{
-  vertical-align: middle;
+.recent{
+
   text-align: center;
+  border: solid 1px ;
+
+}
+img{
+  height: 20%;
+  width: 10%;
+}
+.mix{
+margin: 0 auto;
+}
+.trend{
+  border:1px solid;
+  text-align: center;
+}
+b{
+  border:solid 1px;
 
 }
