--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,32 +1,34 @@
-<div class="search col-lg-6 col-xs-12" style="float:right">
-   <input type="text" name="search" placeholder="Search..">
-
+<div class="b col-md-12">
+  <div class="categories col-md-6 col-sm-12" >
+    <h3>Categories</h3>
+    <ul>
+      <li>Article Writing</li>
+      <li>Bill Payments</li>
+      <li>Photography</li>
+      <li>Laptop/ Mobile repairs</li>
+      <li>Designing</li>
+      <li>Printing</li>
+      <li>Web development</li>
+      <li>application development</li>
+      <li>Transportation</li>
+      <li>Consulting Services</li>
+      <li>Tuitions</li>
+    </ul>
+  </div>
+  <div class="search col-md-6 col-sm-12">
+     <input type="text" name="search" placeholder="Search..">
+     <input type="button" name="search" value="Search">
+  </div>
 </div>
 
+<div class="mix col-md-12">
+    <div class="recent col-md-6 col-sm-12">
+      <h4>Recent Posts</h4>
+      <!-- <img src="1223.jpg" alt=""> -->
+      </div>
 
-<div class="categories col-lg-6 col-xs-12" >
-  <h3>Categories</h3>
-  <ul>
-    <li>Article Writing</li>
-    <li>Bill Payments</li>
-    <li>Photography</li>
-    <li>Laptop/ Mobile repairs</li>
-    <li>Designing</li>
-    <li>Printing</li>
-    <li>Web development</li>
-    <li>application development</li>
 
-    <li>Transportation</li>
-    <li>Consulting Services</li>
-    <li>Tuitions</li>
-  </ul>
-</div>
-
-<div class="Recentposts">
-  <h4>Recent Posts</h4>
-  <ul>
-<li>
-
-</li>
-  </ul>
+  <div class="trend col-md-6 col-sm-12">
+    <h4> Trending jobs</h4>
+  </div>
 </div>
