--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,10 +39,7 @@ ul{
   list-style-type: none;
 }
 .categories{
-  border: solid 1px;
-  height: 400px;
-  width:400px;
-  padding: 2px 2px 2px 2px;
+  // border: solid 1px;
 }
 h3{
   font-style: italic;
@@ -64,12 +61,12 @@ input[type="button"]{
   margin: 0 auto;
 }
 .search{
- border: 1px solid;
+ // border: 1px solid;
 }
 .recent{
 
   text-align: center;
-  border: solid 1px ;
+  // border: solid 1px ;
 
 }
 img{
@@ -80,7 +77,7 @@ img{
 margin: 0 auto;
 }
 .trend{
-  border:1px solid;
+  // border:1px solid;
   text-align: center;
 }
 b{
