contents to recent posts

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -24,10 +24,22 @@
 <div class="mix col-md-12">
     <div class="recent col-md-6 col-sm-12">
       <h4>Recent Posts</h4>
-      <!-- <img src="1223.jpg" alt=""> -->
-      </div>
+      <table>
+        <tr>
+          <td><img src="assets/3.png"></td>
+          <td>I need a person who can click good photos in my birthday. <br><input type="button" value="Get Details" style="text-align:right"></td>
+        </tr>
+        <tr>
+          <td><img src="assets/2.png"></td>
+          <td>Designer is needed to design my website. <br><input type="button" value="Get Details" style="text-align:right"> </td>
+        </tr>
+        <tr>
+          <td><img src="assets/1.png"></td>
+          <td>I want a person who can pay my telephone bills.<br> <input type="button" value="Get Details" style="text-align:right"></td>
+        </tr>
+      </table>
 
-
+    </div>
   <div class="trend col-md-6 col-sm-12">
     <h4> Trending jobs</h4>
   </div>
