--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -41,11 +41,7 @@ ul{
 .categories{
   // border: solid 1px;
 }
-h3{
-  font-style: italic;
-  font-size: 40;
 
-}
 // .input[type=text] {
 //     width: 130px;
 //     -webkit-transition: width 0.4s ease-in-out;
@@ -69,10 +65,10 @@ input[type="button"]{
   // border: solid 1px ;
 
 }
-img{
-  height: 20%;
-  width: 10%;
-}
+// img{
+//   height: 20%;
+//   width: 10%;
+// }
 .mix{
 margin: 0 auto;
 }
