--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -26,15 +26,15 @@
       <h4>Recent Posts</h4>
       <table>
         <tr>
-          <td><img src="assets/3.png"></td>
+          <td><i class="fa fa-camera fa-4x" aria-hidden="true"></i></td>
           <td>I need a person who can click good photos in my birthday. <br><input type="button" value="Get Details" style="text-align:right"></td>
         </tr>
         <tr>
-          <td><img src="assets/2.png"></td>
-          <td>Designer is needed to design my website. <br><input type="button" value="Get Details" style="text-align:right"> </td>
+          <td><i class="fa fa-print fa-4x" aria-hidden="true"></i></td>
+          <td>I have 500 pages document, I need 3copies of each page. I need a person who can print those documents and bring it to me. <br><input type="button" value="Get Details" style="text-align:right"> </td>
         </tr>
         <tr>
-          <td><img src="assets/1.png"></td>
+          <td><i class="fa fa-money fa-4x" aria-hidden="true"></i></td>
           <td>I want a person who can pay my telephone bills.<br> <input type="button" value="Get Details" style="text-align:right"></td>
         </tr>
       </table>
