--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -13,10 +13,10 @@ html,
   font-family: $primary-font;
 }
 .navbar-default .navbar-brand {
-  font-weight: 100;
-  font-size: 30px;
-  letter-spacing: 10px;
-  color: $main-blue;
+  // font-weight: 100;
+  font-size: 20px;
+  // letter-spacing: 10px;
+  // color: $main-blue;
   width: 100%;
 }
 .footer{
