--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -42,5 +42,15 @@
     </div>
   <div class="trend col-md-6 col-sm-12">
     <h4> Trending jobs</h4>
+    <table>
+      <tr>
+        <td><i class="fa fa-pencil fa-4x" aria-hidden="true"></i></td>
+        <td>Article writing jobs are mostly preffered</td>
+      </tr>
+      <tr>
+        <td><i class="fa fa-laptop fa-2x" aria-hidden="true"></i> <i class="fa fa-mobile fa-3x" aria-hidden="true"></i></td>
+        <td>Laptop and mobile repairments</td>
+      </tr>
+    </table>
   </div>
 </div>
