--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -57,7 +57,9 @@ input[type="button"]{
   margin: 0 auto;
 }
 .search{
- // border: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .recent{
 
