--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,7 +15,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to 'Login' %></li>
           <li><%= link_to 'Sign Up' %></li>
-          <li><%= link_to 'About'%></li>
+          <li><%= link_to 'About',about_path%></li>
         </ul>
       	</div>
     	</div>
