--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,19 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.input :name%>
+    <%= f.input :gender%>
+    <%= f.input :email, autofocus: true %>
+    <%= f.input :password, autocomplete: "off" %>
+    <%= f.input :password_confirmation, autocomplete: "off" %>
+    <%= f.input :dob, :as => :date, :start_year => Date.today.year - 18, :end_year => Date.today.year - 99, :month => Date.today.month, :order => [:day, :month, :year], :label => "Day of Birth",:prompt => "Select"%>
+    <%= f.input :contactno, :as => :tel%>
+    <%= f.input :tadd, label: 'Temporary Address'%>
+    <%= f.input :padd, label: 'Permanent Address'%>
+    <%= f.input :hobby, label: 'Hobbies', :as => :text%>
+    <%= f.button :submit, 'Sign up' %>
   </div>
 <% end %>
 
