--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,9 +13,14 @@
 
       		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to 'Login' %></li>
-          <li><%= link_to 'Sign Up' %></li>
-          <li><%= link_to 'About',about_path%></li>
+          <% if user_signed_in? %>
+            <li><%= link_to current_user.email%></li>
+            <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+          <%else%>
+            <li><%= link_to 'Login',new_user_session_path%></li>
+            <li><%= link_to 'Sign Up',new_user_registration_path %></li>
+            <li><%= link_to 'About',about_path%></li>
+          <%end%>
         </ul>
       	</div>
     	</div>
