--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
-<div class="footer text-center">
+<div class="footer text-center col-md-12 col-sm-12">
 <p>© MancheChahiyo <%= Date.today.year %> All Rights Reserved</p>
 </div>
