--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,8 +1,16 @@
+<div class="col-md-3">
+
+</div>
+<div class="col-md-6 container col-sm-12">
 <div class ="about">
-  <h1>About</h1>
+  <h1 align="center">About</h1>
   <p>MancheChahiyo is an online platform that connects the jobseekers to the employer and vice-versa. </p>
 
   <p>We work to reframe the concept of freelancingin Nepal through MancheChahiyo. Anyone with technical(IT skills) or non-technical are welcomed to MancheChahiyo</p>
 
 
   </div>
+</div>
+<div class="col-md-3">
+
+</div>
