--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,7 @@
+<div class="col-md-3">
+
+</div>
+<div class="col-md-6 col-xs-12">
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -14,3 +18,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-3" style="clear:both">
+
+</div>
