--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,24 @@
+<div class="col-md-3">
+
+</div>
+<div class="col-md-6 col-xs-12">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+  <%= f.input :name%>
+  <%= f.input :gender%>
+  <%= f.input :email, autofocus: true %>
+  <%= f.input :password, autocomplete: "off" %>
+  <%= f.input :password_confirmation, autocomplete: "off" %>
+  <%= f.input :dob, :as => :date, :start_year => Date.today.year - 18, :end_year => Date.today.year - 99, :month => Date.today.month, :order => [:day, :month, :year], :label => "Day of Birth",:prompt => "Select"%>
+  <%= f.input :contactno,label: 'Contact Number'%>
+  <%= f.input :tadd, label: 'Temporary Address'%>
+  <%= f.input :padd, label: 'Permanent Address'%>
+  <%= f.input :hobby, label: 'Hobbies', :as => :text%>
+  <%= f.input :current_password, label: 'Current Password'%><i>(we need your current password to confirm your changes)</i>
+  <%= f.submit "Update" %>
 <% end %>
 
 <h3>Cancel my account</h3>
@@ -41,3 +26,7 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
+<div class="col-md-3">
+
+</div>
