--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,14 @@
-<h2>Sign up</h2>
+<div class="col-md-3">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+</div>
+<div class="col-md-6 col-xs-12">
+  <h2 align="center">Sign up</h2>
+
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <div class="field">
     <%= f.input :name%>
-    <%= f.input :gender%>
+    <%= f.input :gender, :as => :radio_buttons, :collection =>['Male', 'Female']%>
     <%= f.input :email, autofocus: true %>
     <%= f.input :password, autocomplete: "off" %>
     <%= f.input :password_confirmation, autocomplete: "off" %>
@@ -18,3 +22,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-3">
+
+</div>
