--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id = "wrap">
       <%= render 'shared/nav' %>
 
-      <div class = "container">
+      <div class = "body">
         <%=yield%>
       </div>
 
