--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,7 +14,9 @@
       		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li><%= link_to current_user.email%></li>
+            <li><%= link_to current_user.name, user_path(current_user.id)%></li>
+            <li><%= link_to 'New Post', new_post_path %></li>
+            <li><%= link_to 'Edit Profile',edit_user_registration_path%></li>
             <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
           <%else%>
             <li><%= link_to 'Login',new_user_session_path%></li>
