active admin installation

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,8 @@
     <%= f.input :tadd, label: 'Temporary Address'%>
     <%= f.input :padd, label: 'Permanent Address'%>
     <%= f.input :hobby, label: 'Hobbies', :as => :text%>
-    <%= f.button :submit, 'Sign up' %>
+    <input type="checkbox" name="" value="accept">I accept the Terms and Conditions of Use <br>
+     <%= f.button :submit, 'Sign up' %>
   </div>
 <% end %>
 
