--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,7 +11,7 @@
         		<a class="navbar-brand" href="/">MancheChahiyo</a>
       		</div>
 
-      		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      		<div class="collaps navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li><%= link_to current_user.name, user_path(current_user.id)%></li>
