--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,5 @@
 <div class="b col-md-12">
   <div class="col-md-3">
-
   </div>
   <div class="categories col-md-3 col-sm-12" >
     <h3>Categories</h3>
@@ -25,7 +24,10 @@
 </div>
 
 <div class="mix col-md-12">
-    <div class="recent col-md-6 col-sm-12">
+
+    <div class="col-md-3">
+    </div>
+    <div class="recent col-md-3 col-sm-12">
       <h4>Recent Posts</h4>
       <% @posts.each do |post| %>
         <%= post.title %> <br>
