--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,10 @@
 <div class="col-md-3">
 
-</div>
-<div class="col-md-6 col-xs-12">
-<h2>Edit Post</h2>
+  </div>
+<div class="col-md-6 col-sm-12 panel panel-default">
+  <div class="panel-default">
+    <div class="panel-heading">
+      <h2 align="center">Edit Post</h2>
 <%= simple_form_for @post do |f| %>
       <%= f.input :title %>
       <%= f.input :description %>
