--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,12 +1,14 @@
 <div class="col-md-3">
 
-</div>
-<div class="col-md-6 container col-sm-12">
-<div class ="about">
-  <h1 align="center">About</h1>
-  <p>MancheChahiyo is an online platform that connects the jobseekers to the employer and vice-versa. </p>
+  </div>
+<div class="col-md-6 col-sm-12 panel panel-default">
+  <div class="panel-default">
+    <div class="panel-heading">
+      <h2 align="center">About</h2>
+    </div>
+      <p>MancheChahiyo is an online platform that connects the jobseekers to the employer and vice-versa. </p>
 
-  <p>We work to reframe the concept of freelancingin Nepal through MancheChahiyo. Anyone with technical(IT skills) or non-technical are welcomed to MancheChahiyo</p>
+      <p>We work to reframe the concept of freelancingin Nepal through MancheChahiyo. Anyone with technical(IT skills) or non-technical are welcomed to MancheChahiyo</p>
 
 
   </div>
