--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <h2 align="center"><%= @user.name %></h2>
   </div>
 
-      <%= @user.posts.each do |post| %>
+      <% @user.posts.each do |post| %>
           <div class="panel-body">
             <%= link_to post.title, post_path(post.id) %>
           </div>
