--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,36 +1,35 @@
-$footer-height: 45px;
-$primary-font: 'Open Sans', sans-serif;
-$secondary-font: 'Dosis', sans-serif;
-$main-blue: #337ab7;
+$footer-height:45px;
 
 .navbar-default {
-  font-family: $secondary-font;
   background-color: white;
 }
-html,
- body {
-   height: 100%;
-  font-family: $primary-font;
-}
-.navbar-default .navbar-brand {
-  // font-weight: 100;
-  font-size: 20px;
-  // letter-spacing: 10px;
-  // color: $main-blue;
-  width: 100%;
-}
-.footer{
-  height: $footer-height;
+
+html, body {
+  height:100%;
 }
 
+.navbar-default .navbar-brand {
+  font-weight: 50;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
+
+.navbar-header {
+  float: none;
+}
+
+.navbar-nav {
+  float: right;
+}
+
+/* helps to float list in right posititon */
 #wrap {
   min-height:90%;
   height: auto;
-  /* Negative indent footer by its height */
   margin: 0 auto $footer-height;
-  /* Pad bottom by footer height */
   padding: 0 0 $footer-height;
 }
+
 a{
   color:black!important;
   text-decoration: none;
@@ -51,10 +50,7 @@ ul{
   // border: solid 1px ;
 
 }
-// img{
-//   height: 20%;
-//   width: 10%;
-// }
+
 .mix{
 margin: 0 auto;
 }
@@ -67,8 +63,9 @@ b{
 }
 .container{
   border: solid .5px;
-  border-radius: 10px
+  border-radius: 10px;
+  background: rgba(0,0,50,0);
 }
-.container{
-  background: rgba(0,0,50,0)
+.footer{
+  height: $footer-height;
 }
