--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,19 +3,7 @@
   </div>
   <div class="categories col-md-3 col-sm-12" >
     <h3>Categories</h3>
-    <ul>
-      <li>Article Writing</li>
-      <li>Bill Payments</li>
-      <li>Photography</li>
-      <li>Laptop/ Mobile repairs</li>
-      <li>Designing</li>
-      <li>Printing</li>
-      <li>Web development</li>
-      <li>application development</li>
-      <li>Transportation</li>
-      <li>Consulting Services</li>
-      <li>Tuitions</li>
-    </ul>
+  <h2>Coming Soon</h3>
   </div>
   <div class="search col-md-3 col-sm-12">
     <input type="text" name="search" placeholder="Search.."><br>
