Dropdown menu fixed

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,7 +39,7 @@ ul{
   list-style-type: none;
 }
 .categories{
-  // border: solid 1px;
+  text-align: center;
 }
 .search{
   text-align: center;
@@ -53,6 +53,7 @@ ul{
 
 .mix{
 margin: 0 auto;
+padding: 10 10 10 10;
 }
 .trend{
   // border:1px solid;
