--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,7 +9,7 @@
       <%= f.input :title %>
       <%= f.input :description %>
       <%= f.input :category %>
-      <%= f.submit 'update', class: 'btn btn-primary' %>
+      <%= f.submit 'Update', class: 'btn btn-primary' %>
 <% end %>
 </div>
 <div class="col-md-3">
