--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,12 +2,12 @@
   <div class="col-md-3">
   </div>
   <div class="categories col-md-3 col-sm-12" >
-    <h3>Categories</h3>
-  <h2>Coming Soon</h3>
+    <h2><%= User.all.count%></h2>
+    <h4>Users</h4>
   </div>
   <div class="search col-md-3 col-sm-12">
-    <input type="text" name="search" placeholder="Search.."><br>
-    <input type="button" name="search" value="Search">
+    <h2><%= Post.all.count%></h2>
+    <h4>Posts</h4>
   </div>
 </div>
 
@@ -16,7 +16,7 @@
     <div class="col-md-3">
     </div>
     <div class="recent col-md-3 col-sm-12">
-      <h4>Recent Posts</h4>
+      <h4>Recent</h4>
       <% @posts.each do |post| %>
         <%= post.title %> <br>
         <%= post.category %> <br>
@@ -25,7 +25,7 @@
       <% end %>
     </div>
   <div class="trend col-md-6 col-sm-12">
-    <h4> Trending jobs</h4>
+    <h4>Famous</h4>
     <table>
       <tr>
         <td><i class="fa fa-pencil fa-4x" aria-hidden="true"></i></td>
