--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
         	</button>
         		<a class="navbar-brand" href="/">MancheChahiyo</a>
-          </div><!-- navbar-header -->
+          </div>
       		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <% if user_signed_in? %>
@@ -23,7 +23,7 @@
                 <li><%= link_to 'About',about_path%></li>
               <% end %>
             </ul>
-        </div><!-- collapse -->
+        </div>
 
-    </div><!-- container-fluid -->
+    </div>
 </nav>
