thank you page added

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.input :contactno, :as => :tel%>
     <%= f.input :tadd, label: 'Temporary Address'%>
     <%= f.input :padd, label: 'Permanent Address'%>
-    <%= f.input :hobby, label: 'Hobbies', :as => :text%>
+    <%= f.input :hobby, label: 'Skills', :as => :text%>
     <input type="checkbox" name="" value="accept">I accept the Terms and Conditions of Use <br>
      <%= f.button :submit, 'Sign up' %>
   </div>
