--- a/app/views/static/thank.html.erb
+++ b/app/views/static/thank.html.erb
@@ -1,6 +1,16 @@
-Thank you for signing up at MancheChahiyo!
-Benefits you get:
-<ul>
-  <li>3 months subscription to MancheChahiyo.
-  <li>100 MancheChahiyo Credits.
-</ul>
+<div class="col-md-12">
+  <div class="col-md-3">
+
+  </div>
+  <div class="col-md-6">
+    <h2>Thank you for signing up at MancheChahiyo!</h2>
+    Benefits you get:
+    <ol>
+      <li>3 months subscription to MancheChahiyo.
+      <li>100 MancheChahiyo Credits.
+    </ol>
+  </div>
+  <div class="col-md-3">
+
+  </div>
+</div>
