--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,3 +11,14 @@
 
   </div>
 </div>
+<div class="col-md-12">
+  <div class="col-md-3">
+
+  </div>
+  <div class="well col-md-6 center">
+    <h3>Sign up for FREE today!</h3> <br>
+  </div>
+  <div class="col-md-3">
+
+  </div>
+</div>
